--- a/index.html
+++ b/index.html
@@ -8,6 +8,44 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Sign-up Form</h1>
+    <form>
+        <div>
+            <p>This is not a real online service! You know you need something like this in your life
+                to help you realize your deepest dreams. Sign up now to get started.
+            </p>
+            <p>You know you want to.</p>
+        </div>
+        <div>
+            <p>Let's do this!</p>
+            <div>
+                <label for="first-name">First Name</label>
+                <input type="text" id="first-name" name="first-name">
+            </div>
+            <div>
+                <label for="last-name">Last Name</label>
+                <input type="text" id="last-name" name="last-name">
+            </div>
+            <div>
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email">
+            </div>
+            <div>
+                <label for="phone">Phone Number</label>
+                <input type="tel" id="phone" name="phone">
+            </div>
+            <div>
+                <label for="password">Password</label>
+                <input type="password" id="password" name="password">
+            </div>
+            <div>
+                <label for="re-password">Confirm Password</label>
+                <input type="password" id="re-password" name="re-password">
+            </div>
+        </div>
+        <div>
+            <button>Create Account</button>
+            <p>Already have an account? Log in</p>
+        </div>
+    </form>
 </body>
 </html>
