--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <form>
-        <div>
+        <div class="form-header">
             <p>This is not a real online service! You know you need something like this in your life
-                to help you realize your deepest dreams. Sign up now to get started.
+                to help you realize your deepest dreams. Sign up <em>now</em> to get started.
             </p>
-            <p>You know you want to.</p>
+            <p>You <em>know</em> you want to.</p>
         </div>
-        <div>
+        <div class="form-main">
             <p>Let's do this!</p>
             <div>
                 <label for="first-name">First Name</label>
@@ -42,7 +42,7 @@
                 <input type="password" id="re-password" name="re-password">
             </div>
         </div>
-        <div>
+        <div class="form-submit">
             <button>Create Account</button>
             <p>Already have an account? Log in</p>
         </div>
