--- a/index.html
+++ b/index.html
@@ -15,35 +15,43 @@
             </p>
             <p>You <em>know</em> you want to.</p>
         </div>
+
         <div class="form-main">
             <p>Let's do this!</p>
-            <div>
-                <label for="first-name">First Name</label>
-                <input type="text" id="first-name" name="first-name">
+            <div class="row">
+                <div>
+                    <label for="first-name">First Name</label>
+                    <input type="text" id="first-name" name="first-name">
+                </div>
+                <div>
+                    <label for="last-name">Last Name</label>
+                    <input type="text" id="last-name" name="last-name">
+                </div>
             </div>
-            <div>
-                <label for="last-name">Last Name</label>
-                <input type="text" id="last-name" name="last-name">
+            <div class="row">
+                <div>
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email">
+                </div>
+                <div>
+                    <label for="phone">Phone Number</label>
+                    <input type="tel" id="phone" name="phone">
+                </div>
             </div>
-            <div>
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email">
-            </div>
-            <div>
-                <label for="phone">Phone Number</label>
-                <input type="tel" id="phone" name="phone">
-            </div>
-            <div>
-                <label for="password">Password</label>
-                <input type="password" id="password" name="password">
-            </div>
-            <div>
-                <label for="re-password">Confirm Password</label>
-                <input type="password" id="re-password" name="re-password">
+            <div class="row">
+                <div>
+                    <label for="password">Password</label>
+                    <input type="password" id="password" name="password">
+                </div>
+                <div>
+                    <label for="re-password">Confirm Password</label>
+                    <input type="password" id="re-password" name="re-password">
+                </div>
             </div>
         </div>
+
         <div class="form-submit">
-            <button>Create Account</button>
+            <button class="submit-button">Create Account</button>
             <p>Already have an account? Log in</p>
         </div>
     </form>
