--- a/index.html
+++ b/index.html
@@ -8,52 +8,53 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <form>
-        <div class="form-header">
-            <p>This is not a real online service! You know you need something like this in your life
-                to help you realize your deepest dreams. Sign up <em>now</em> to get started.
-            </p>
-            <p>You <em>know</em> you want to.</p>
-        </div>
-
-        <div class="form-main">
-            <p>Let's do this!</p>
-            <div class="row">
-                <div>
-                    <label for="first-name">First Name</label>
-                    <input type="text" id="first-name" name="first-name">
+    <div class="container">
+        <img src="assets/halie-west-25xggax4bSA-unsplash.jpg" alt="Image of a plant">
+        <form>
+            <div class="form-header">
+                <p>This is not a real online service! You know you need something like this in your life
+                    to help you realize your deepest dreams. <br> Sign up <em>now</em> to get started.
+                </p>
+                <p>You <em>know</em> you want to.</p>
+            </div>
+            <div class="form-main">
+                <p>Let's do this!</p>
+                <div class="row">
+                    <div>
+                        <label for="first-name">First Name</label>
+                        <input type="text" id="first-name" name="first-name">
+                    </div>
+                    <div>
+                        <label for="last-name">Last Name</label>
+                        <input type="text" id="last-name" name="last-name">
+                    </div>
                 </div>
-                <div>
-                    <label for="last-name">Last Name</label>
-                    <input type="text" id="last-name" name="last-name">
+                <div class="row">
+                    <div>
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="email">
+                    </div>
+                    <div>
+                        <label for="phone">Phone Number</label>
+                        <input type="tel" id="phone" name="phone">
+                    </div>
+                </div>
+                <div class="row">
+                    <div>
+                        <label for="password">Password</label>
+                        <input type="password" id="password" name="password">
+                    </div>
+                    <div>
+                        <label for="re-password">Confirm Password</label>
+                        <input type="password" id="re-password" name="re-password">
+                    </div>
                 </div>
             </div>
-            <div class="row">
-                <div>
-                    <label for="email">Email</label>
-                    <input type="email" id="email" name="email">
-                </div>
-                <div>
-                    <label for="phone">Phone Number</label>
-                    <input type="tel" id="phone" name="phone">
-                </div>
+            <div class="form-submit">
+                <button class="submit-button">Create Account</button>
+                <p>Already have an account? <a href="#">Log in</a></p>
             </div>
-            <div class="row">
-                <div>
-                    <label for="password">Password</label>
-                    <input type="password" id="password" name="password">
-                </div>
-                <div>
-                    <label for="re-password">Confirm Password</label>
-                    <input type="password" id="re-password" name="re-password">
-                </div>
-            </div>
-        </div>
-
-        <div class="form-submit">
-            <button class="submit-button">Create Account</button>
-            <p>Already have an account? Log in</p>
-        </div>
-    </form>
+        </form>
+    </div>
 </body>
 </html>
