Add image author info and link to bottom of image

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <div class="container">
-        <img src="assets/halie-west-25xggax4bSA-unsplash.jpg" alt="Image of a plant">
+        <div class="image-container">
+            <img src="assets/halie-west-25xggax4bSA-unsplash.jpg" alt="Image of a plant">
+            <p>Photo by <a href="https://unsplash.com/@haliewestphoto">Halie West</a> on <a href="https://unsplash.com/photos/25xggax4bSA">Unsplash</a></p>
+        </div>
         <form>
             <div class="form-header">
                 <p>This is not a real online service! You know you need something like this in your life
