--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <div class="container">
         <div class="image-container">
             <img src="assets/halie-west-25xggax4bSA-unsplash.jpg" alt="Image of a plant">
+            <div class="logo">
+                <img src="assets/odin-lined.png" alt="logo image">
+                Odin
+            </div>
             <p>Photo by <a href="https://unsplash.com/@haliewestphoto">Halie West</a> on <a href="https://unsplash.com/photos/25xggax4bSA">Unsplash</a></p>
         </div>
         <form>
