Add error message under password inputs

--- a/index.html
+++ b/index.html
@@ -49,14 +49,15 @@
                 </div>
                 <div class="row">
                     <div>
-                        <label for="password">Password</label>
+                        <label for="pass">Password</label>
                         <input type="password" id="pass" name="pass">
                     </div>
                     <div>
-                        <label for="re-password">Confirm Password</label>
+                        <label for="repass">Confirm Password</label>
                         <input type="password" id="repass" name="repass">
                     </div>
                 </div>
+                <p class="error-msg">* Passwords do not match!</p>
             </div>
             <div class="form-submit">
                 <button type="submit" class="submit-button">Create Account</button>
