Add password validation

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
                 <div class="row">
                     <div>
                         <label for="pass">Password</label>
-                        <input type="password" id="pass" name="pass">
+                        <input type="password" id="pass" name="pass" required>
                     </div>
                     <div>
                         <label for="repass">Confirm Password</label>
-                        <input type="password" id="repass" name="repass">
+                        <input type="password" id="repass" name="repass" required>
                     </div>
                 </div>
                 <p class="error-msg">* Passwords do not match!</p>
